lab1/Test/L1-A-10-16.output
Error Type A at Line 4
Error Type A at Line 14
Error Type B at Line 34
Error Type B at Line 42
Error Type B at Line 43
Error Type B at Line 69
Error Type A at Line 81
Error Type B at Line 96
Error Type A at Line 102
