lab1/Test/L1-A-10-16.cmm
struct lKQMncFQTth TnCdpdyd0l49wSKqT9 ( ) {
  struct H61HJcU72QIh {
    int PMw0ZY2jn ;
    float PouDkfVyySCEK3zU , @Mb14ho ;
  }RggEMSaS5LX [ 1635944515 ] = zLhD32zgDcb7nYsAAC 
    = zvnMm / ! _7SD35kUS [ sLpCY8yGY7CQ9Cch6Wfb = z9pBiW_fhEsWfVxPYhh 
    = k_niZoZZPz || sJiJG_a && kXihUljSqqhOwnThZW8 <= 
    i5ysfQ94_WPk9 + PF * - - ! ! ! ! rk4JEGv_mr ( PIn6lD74lO 
    , AQxLRAKHb = ZcAUM6rCNx2Q05xRb = _0SueVdTuaIv8m3DZWq 
    = TkU = HhR28hKBZmGvwcBaf1I8 || eEmS >= M - ! ( Cg25t8iS 
    || iP00d != CLAjx5nmQN6jYGn9pXj / ( dCVElLe = v && 
    u_PHFPhrX4E7dy == - ( x9s6fzpcQSuPn > Kz3dK9YtVTyLR 
    * - ( hJWYXrw58q2V7 < ksuO ) . sjYAY7C989e49gilo_ 
    ) ) :) * - ! QzbAWg_WncQUUKy / 1133487144 ) - PQ2Pcus 
    ( ) . B * - - 2043185194.1537703882 ] ;
}
int ;
int ;
int BRQr 
;
int ;
struct {
  int Uv1d7JJDsPzkNcGXQm ;
  int Zkf6C1Y7 ;
};
int ;
int ;
int ;
int g5YH0 ( int xbkf7LXKdMnu4D ) {
  while ( eJfeFAHyUv90 )   WntCN4zr2 ;

  if ( qH )   return MVjW8ovuyReQql2 ;
else {
<=     if ( m )     BaEWE_UbdgPZJ ;

  }
}
int zIP , JhpHRC5qOaql4I 

;
int ;
int ;<= 
int nrqmdplAH9pFw ( ) == {
  while ( EQ )   while ( IfrCMmDkZlCzXS )   xMvgoP 
    ;


  szOXGAyxztGy2k_ ;
}
int ;
int ;
int u34eVQ9omG1bQDmIAbyh ( ) {
}
int cAiGP ( int KzYcPxKuXPILrQRcjx , int RoiFxzg01XPPKMVC 
  ) {
}
int nF2W5oPY3yoB_GeOD ( ) {
}
int ;
int ZItwUfC3J4 ( ) {
}
int ;
int F3fWZ0qtQCUOt2JrDFCp ( ) {
}
int ;
int JLALM2mZY9xWSnoW ( ) {
}
int Wv4 ( ) {
,   while ( S ) {
  }
}
int ;
int yn1YGlpl7q5WI3fn3U ( ) {
  if ( p8wScPD5r31edg ) {
  }else   UN3AIcDBGc ;

}
int ;
int ;
int sDexQP ( ) {
'}
int ;
int vw6pmZTrMBk5Kzw ( ) {
  if ( ELCQ6 )   GZPyR5TrdGT ;
else   y ;

  if ( dNCmwv5UDelnU3m )   dAyOtyx ;
else {
  }
  XUMvzW5gUOBmK ;
}
int ;
int ;
int ;
int ;
int nnwHm2 float ( ) {
  if ( j4 )   FR ;
else   if ( DIp4ij0kGH1uk0edP )   yI ;


}
~